--- a/centuryrealestate_files/contact.css
+++ b/centuryrealestate_files/contact.css
@@ -18,7 +18,7 @@
     align-items: center;
 }
 .mapaddress__block h4{
-    color: #9f1635;
+    color: #bb9765;
 }
 .mapaddress__block .sub-title img{
     margin-right: .5rem;
@@ -59,7 +59,7 @@
 }
 .emails__inner__block__top{
     font-family: "corporate_sbold", Verdana, Geneva, Tahoma, sans-serif;
-    background: #9f1635;
+    background: #bb9765;
     margin-bottom: 0;
     text-align: center;
     padding: 0.7rem 1rem;
@@ -75,7 +75,7 @@
 .emails__inner__block__bottom{
     min-height: 8rem;
     text-align: center;
-    border: 1px solid #9f1635;
+    border: 1px solid #bb9765;
     display: flex;
     justify-content: center;
     
